--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(CMakeLists CMakeLists.txt)
 add_executable(P5727 [深基5.例3]冰雹猜想 "洛谷/站内题单/【入门4】数组/P5727 【深基5-例3】冰雹猜想.cpp")
 add_executable(P5728 【深基5-例5】旗鼓相当的对手 "洛谷/站内题单/【入门4】数组/P5728 【深基5-例5】旗鼓相当的对手.cpp")
 add_executable( .gitignore)
+add_executable(README README.md)
